// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`service-weather-item Renders \`service-weather-item\` with custom props 1`] = `
<card-with-see-alarms-btn-stub
  class="cursor-pointer service-weather-item mt-0 mr-0 mb-0 ml-0"
  style="height: 4em; color: white;"
>
  <div
    class="layout fill-height service-weather-item__content row justify-space-between"
  >
    <div
      class="flex position-relative fill-height"
    >
      <div
        class="layout justify-start blinking"
      >
        <div
          class="service-weather-item__template pa-3"
        />
      </div>
      <div
        class="layout service-weather-item__toolbar pt-1 pr-1 row align-center"
      >
        <c-no-events-icon-stub
          color="white"
          top="top"
        />
        <impact-state-indicator-stub
          class="mr-1"
          value="3"
        />
        <!---->
      </div>
      <i
        aria-hidden="true"
        class="v-icon service-weather-item__background material-icons theme--light white--text"
        style="font-size: 5em;"
      />
      <!---->
    </div>
    <!---->
    <!---->
  </div>
</card-with-see-alarms-btn-stub>
`;

exports[`service-weather-item Renders \`service-weather-item\` with full access 1`] = `
<card-with-see-alarms-btn-stub
  class="cursor-pointer service-weather-item mt-1 mr-3 mb-5 ml-7"
  showbutton="true"
  style="height: 16em; color: white;"
>
  <div
    class="layout fill-height service-weather-item__content row justify-space-between"
  >
    <div
      class="flex position-relative fill-height"
    >
      <div
        class="layout justify-start"
      >
        <div
          class="service-weather-item__template pa-3"
        >
          <p>
            <strong>
              <span
                style="font-size: 18px;"
              />
            </strong>
          </p>
           
          <hr
            id="null"
          />
           
          <p />
           
          <p>
             Dernière mise à jour : 
          </p>
        </div>
      </div>
      <div
        class="layout service-weather-item__toolbar pt-1 pr-1 row align-center"
      >
        <c-no-events-icon-stub
          color="white"
          top="top"
        />
        <impact-state-indicator-stub
          class="mr-1"
          value="0"
        />
        <button
          class="ma-0 v-btn v-btn--icon v-btn--small theme--light"
          type="button"
        >
          <div
            class="v-btn__content"
          >
            <i
              aria-hidden="true"
              class="v-icon material-icons theme--light white--text"
              style="font-size: 16px;"
            >
              help
            </i>
          </div>
        </button>
      </div>
      <i
        aria-hidden="true"
        class="v-icon service-weather-item__background material-icons theme--light white--text"
        style="font-size: 5em;"
      />
      <!---->
    </div>
    <!---->
    <alarm-state-counters-stub
      counters="[object Object]"
      types="state-types"
    />
  </div>
</card-with-see-alarms-btn-stub>
`;
